# skeleton_msgs

./: .clang-format  CMakeLists.txt  README.md  package.xml
include/skeleton_msgs/: types.h  utils.h
include/skeletons/: types.h  utils.h
msg/: Box.msg  Keypoint.msg  KeypointGroup.msg  Link.msg  MIMU.msg  MarkerGroup.msg  MarkerSkeletonGroup.msg  Orientation.msg  OrientationGroup.msg  OrientationSkeleton.msg  OrientationSkeletonGroup.msg  Point.msg  Skeleton.msg  SkeletonGroup.msg  StampedSkeleton.msg
src/: types.cpp  utils.cpp
